# awsome-cli

./: .gitignore  Cargo.toml  QUICKSTART.md  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  aws.rs  lib.rs  main.rs  ui.rs
src/aws/: cloudwatch.rs  dynamodb.rs  ec2.rs  ecs.rs  iam.rs  lambda.rs  mod.rs  mwaa.rs  s3.rs  utils.rs
tests/: integration_s3.rs  ui_tests.rs
