[package]
name = "awsome"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
aws-config = "1.5"
aws-sdk-ec2 = "1.87"
aws-sdk-s3 = "1.62"
aws-sdk-iam = "1.52"
aws-sdk-cloudwatch = "1.58"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
