[package]
name = "awsome"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
aws-config = "1.5"
aws-sdk-ec2 = "1.87"
aws-sdk-s3 = { version = "1.62", features = ["test-util"] }
aws-sdk-iam = "1.52"
aws-sdk-cloudwatch = "1.58"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-sdk-dynamodb = "1.100.0"

[dev-dependencies]
aws-smithy-mocks = "0.2.1"
aws-smithy-types = "1.3.4"
tokio-test = "0.4.4"
