[package]
name = "awsome"
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
ratatui = "0.29"
crossterm = "0.29.0"
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
aws-config = "1.8.11"
aws-sdk-ec2 = "1.193.0"
aws-sdk-s3 = { version = "1.115.0", features = ["test-util"] }
aws-sdk-iam = "1.99.0"
aws-sdk-cloudwatch = "1.98.0"
aws-sdk-dynamodb = "1.100.0"
aws-sdk-ecs = "1.107.0"
aws-sdk-mwaa = "1.96.0"

[dev-dependencies]
aws-smithy-mocks = "0.2.1"
aws-smithy-types = "1.3.4"
